# Computer-Vision-VANT

./: AAKAZE_ANGULOS_VANT.cpp  AAKAZE_ANGULOS_VANT.h  AAKAZE_VANT.cpp  AAKAZE_VANT.h  AKAZE_VANT.cpp  AKAZE_VANT.h  ASIFT_ANGULOS_VANT.cpp  ASIFT_ANGULOS_VANT.h  ASIFT_VANT.cpp  ASIFT_VANT.h  ASURF_ANGULOS_VANT.cpp  ASURF_ANGULOS_VANT.h  ASURF_VANT.cpp  ASURF_VANT.h  CMakeLists.txt  Makefile  ORB_VANT.cpp  ORB_VANT.h  README.md  Readme.txt  SIFT_VANT.cpp  SIFT_VANT.h  SURF_VANT.cpp  SURF_VANT.h  acuracia.cpp  acuracia.h  acuracia1.cpp  acuracia1.h  demo_ASIFT.cpp  main.cpp
dados_AAKAZE/: _0.txt
dados_AAKAZE_ANGULOS/: _0.txt
dados_AKAZE/: _0.txt
dados_ASIFT/: _0.txt
dados_ASIFT_ANGULOS/: _0.txt  _0_1.txt~
dados_ASURF/: _0.txt
dados_ASURF_ANGULOS/: _0.txt
dados_ORB/: _0.txt
dados_SIFT/: _0.txt
dados_SURF/: _0.txt
